<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favourite"
            android:icon="@mipmap/ic_star_rate"
            android:title="@string/itemFavourite" />
        <item
            android:id="@+id/nav_water"
            android:icon="@mipmap/ic_waves"
            android:title="@string/itemWater" />
        <item
            android:id="@+id/nav_fire"
            android:icon="@mipmap/ic_whatshot"
            android:title="@string/itemFire" />
        <item
            android:id="@+id/nav_electric"
            android:icon="@mipmap/ic_flash_on"
            android:title="@string/itemElectric" />
    </group>

    <item android:title="@string/mComunicacion">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_share"
                android:title="@string/actionAbout" />
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/ic_thumb_up"
                android:title="@string/itemFeedback" />
        </menu>
    </item>

</menu>
